@@ -21,7 +21,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.configurationmetadata.ConfigurationMetadataProperty;
 import org.springframework.boot.configurationmetadata.ConfigurationMetadataRepository;
@@ -78,8 +77,7 @@ class PropertiesMigrationReporter {
 	private PropertySource<?> mapPropertiesWithReplacement(PropertiesMigrationReport report, String name,
 			List<PropertyMigration> properties) {
 		report.add(name, properties);
-		List<PropertyMigration> renamed = properties.stream().filter(PropertyMigration::isCompatibleType)
-				.collect(Collectors.toList());
+		List<PropertyMigration> renamed = properties.stream().filter(PropertyMigration::isCompatibleType).toList();
 		if (renamed.isEmpty()) {
 			return null;
 		}
@@ -96,8 +94,7 @@ class PropertiesMigrationReporter {
 	private Map<String, List<PropertyMigration>> getMatchingProperties(
 			Predicate<ConfigurationMetadataProperty> filter) {
 		MultiValueMap<String, PropertyMigration> result = new LinkedMultiValueMap<>();
-		List<ConfigurationMetadataProperty> candidates = this.allProperties.values().stream().filter(filter)
-				.collect(Collectors.toList());
+		List<ConfigurationMetadataProperty> candidates = this.allProperties.values().stream().filter(filter).toList();
 		getPropertySourcesAsMap().forEach((name, source) -> candidates.forEach((metadata) -> {
 			ConfigurationPropertyName metadataName = ConfigurationPropertyName.isValid(metadata.getId())
 					? ConfigurationPropertyName.of(metadata.getId())
