@@ -33,7 +33,6 @@ import java.util.Set;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.repository.internal.MavenRepositorySystemUtils;
@@ -96,7 +95,7 @@ final class ModifiedClassPathClassLoader extends URLClassLoader {
 		candidates.add(testMethod);
 		candidates.addAll(getAnnotatedElements(arguments.toArray()));
 		List<AnnotatedElement> annotatedElements = candidates.stream()
-				.filter(ModifiedClassPathClassLoader::hasAnnotation).collect(Collectors.toList());
+				.filter(ModifiedClassPathClassLoader::hasAnnotation).toList();
 		if (annotatedElements.isEmpty()) {
 			return null;
 		}
@@ -176,6 +175,7 @@ final class ModifiedClassPathClassLoader extends URLClassLoader {
 				return createdBy != null && createdBy.contains("IntelliJ");
 			}
 			catch (Exception ex) {
+				// Ignore
 			}
 		}
 		return false;
@@ -298,6 +298,7 @@ final class ModifiedClassPathClassLoader extends URLClassLoader {
 					}
 				}
 				catch (URISyntaxException ex) {
+					// Ignore
 				}
 			}
 			return false;
